user not found fix
