# api/docs/swagger.json
@@ -161,6 +161,43 @@
                 }
             }
         },
+        "/user/refresh": {
+            "post": {
+                "description": "method for check refresh token and refresh tokens",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "RefreshTokens",
+                "parameters": [
+                    {
+                        "description": "request body with access and refresh tokens",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Tokens"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user/registration": {
             "post": {
                 "description": "add new user to the database",
@@ -332,6 +369,17 @@
                 },
                 "ok": {
                     "type": "boolean"
+                }
+            }
+        },
+        "models.Tokens": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
                 }
             }
         },
